--- a/index.html
+++ b/index.html
@@ -3,18 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fraction Calculator</title>
+    <title>Your Website Title</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Fraction Calculator</h1>
-    <div id="calculator">
-        <input type="text" id="fraction1" placeholder="Enter first fraction (e.g., 1/2)">
-        <input type="text" id="fraction2" placeholder="Enter second fraction (e.g., 1/3)">
-        <button onclick="calculateFractions()">Calculate</button>
-        <div id="result"></div>
-        <div id="steps"></div>
-    </div>
+    <header>
+        <h1>Welcome to My Website</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>This is the home section of the website.</p>
+        </section>
+        <section id="about">
+            <h2>About</h2>
+            <p>This section contains information about the website.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Contact us at: <a href="mailto:example@example.com">example@example.com</a></p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Your Website Name</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
